--- a/android/project/app/build.gradle
+++ b/android/project/app/build.gradle
@@ -16,4 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
+    sourceSets{
+        main{
+            jni.srcDirs=[]
+        }
+    }
 }
