--- a/android/project/app/build.gradle
+++ b/android/project/app/build.gradle
@@ -25,24 +25,29 @@ android {
             jniLibs.srcDirs = ['src/main/libs']
         }
     }
-    task buildNative(type: Exec, description: 'Compile JNI source via NDK') {
-        def ndkDir = android.ndkDirectory
-        commandLine "$ndkDir/ndk-build",
-                '-C', file('src/main/jni').absolutePath,
-                '-j', Runtime.runtime.availableProcessors(),
-                'all',
-                'NDK_DEBUG=1'
-    }
-    task cleanNative(type: Exec, description: 'Clean JNI object files') {
-        def ndkDir = android.ndkDirectory
-        commandLine "$ndkDir/ndk-build",
-                '-C', file('src/main/jni').absolutePath,
-                'clean'
-    }
-    clean.dependsOn 'cleanNative'
-    tasks.withType(JavaCompile) {
-        compileTask -> compileTask.dependsOn buildNative
-    }
+
+//    task buildNative(type: Exec, description: 'Compile JNI source via NDK') {
+//        def ndkDir = android.ndkDirectory
+//        commandLine "$ndkDir/ndk-build",
+//                '-C', file('src/main/jni').absolutePath,
+//                '-j', Runtime.runtime.availableProcessors(),
+//                'all',
+//                'NDK_DEBUG=1'
+//    }
+//
+//    task cleanNative(type: Exec, description: 'Clean JNI object files') {
+//        def ndkDir = android.ndkDirectory
+//        commandLine "$ndkDir/ndk-build",
+//                '-C', file('src/main/jni').absolutePath,
+//                'clean'
+//    }
+//
+//    clean.dependsOn 'cleanNative'
+
+//    tasks.withType(JavaCompile) {
+//        compileTask -> compileTask.dependsOn buildNative
+//    }
+
     productFlavors {
     }
 }
