--- a/RaknetServer/RaknetServer/SConstruct
+++ b/RaknetServer/RaknetServer/SConstruct
@@ -19,5 +19,5 @@ env.Append(LIBS=['pthread'])
 env.Append(LIBS=['boost_regex'])
 env.Append(LIBS=['boost_thread'])
 
-env.Program('server',Glob('*.cpp'),CCFLAGS=[env['CCFLAGS'],'-std=gnu++11'])
+env.Program('server',Glob('*.cpp'),CCFLAGS=[env['CCFLAGS'],'-std=gnu++11'],LINKFLAGS=['-g'])
 
