--- a/RaknetServer/RaknetServer/SConstruct
+++ b/RaknetServer/RaknetServer/SConstruct
@@ -13,6 +13,7 @@ env.Append(LIBS=['math'])
 env.Append(LIBS=['kazmath'])
 env.Append(LIBS=['ext'])
 env.Append(LIBS=['dl'])
+env.Append(LIBS=['hiredis'])
 env.Append(LIBS=['jansson'])
 env.Append(LIBS=['uv'])
 env.Append(LIBS=['pthread'])
