--- a/RaknetServer/RaknetServer/SConstruct
+++ b/RaknetServer/RaknetServer/SConstruct
@@ -20,5 +20,5 @@ env.Append(LIBS=['pthread'])
 env.Append(LIBS=['boost_regex'])
 env.Append(LIBS=['boost_thread'])
 
-env.Program('server',Glob('*.cpp'),CCFLAGS=[env['CCFLAGS'],'-std=gnu++11'],LINKFLAGS=['-g'])
+env.Program('server',Glob('*.cpp'),CCFLAGS=[env['CCFLAGS'],'-std=gnu++11'],LINKFLAGS=['-O2'])
 
