--- a/android/project/app/src/main/AndroidManifest.xml
+++ b/android/project/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cxengine.test">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.cxengine.test">
 
     <uses-feature android:glEsVersion="0x00020000" android:required="true"/>
 
@@ -15,7 +14,7 @@
         <activity
             android:name="com.cxengine.EngineActivity"
             android:label="@string/app_name"
-            android:screenOrientation="landscape"
+            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden">
             <meta-data android:name="android.app.lib_name" android:value="cxEngineAndroid" />
             <intent-filter>
