--- a/udpTest/SConstruct
+++ b/udpTest/SConstruct
@@ -3,8 +3,15 @@ SConscript(['../SConscript'])
 
 Import('env')
 
-env.Program("test", "udp/main.cpp",LIBS=['-lstdc++','z','uv','pthread','udp','core','math','kazmath','ext','jansson'])
+env.Append(LIBS=['udp'])
+env.Append(LIBS=['core'])
+env.Append(LIBS=['math'])
+env.Append(LIBS=['kazmath'])
+env.Append(LIBS=['ext'])
+env.Append(LIBS=['stdc++'])
+env.Append(LIBS=['jansson'])
+env.Append(LIBS=['z'])
+env.Append(LIBS=['uv'])
+env.Append(LIBS=['pthread'])
 
-
-
-
+env.Program("test", "udp/main.cpp", CFLAGS=[])
