--- a/cxEngine Class.xctemplate/TemplateInfo.plist
+++ b/cxEngine Class.xctemplate/TemplateInfo.plist
@@ -5,9 +5,9 @@
 	<key>Kind</key>
 	<string>Xcode.IDEFoundation.TextSubstitutionFileTemplateKind</string>
 	<key>Description</key>
-	<string>An empty C++ file.</string>
+	<string>An empty cxEngine C++ file.</string>
 	<key>Summary</key>
-	<string>An empty C++ file.</string>
+	<string>An empty cxEngine C++ file.</string>
 	<key>SortOrder</key>
 	<string>34</string>
 	<key>AllowedTypes</key>
