--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -166,8 +166,12 @@ add_library( # Sets the name of the library.
             ${CX_ENGINE_PATH}/engine/cxTouch.cpp
             ${CX_ENGINE_PATH}/engine/cxTriangles.cpp
             ${CX_ENGINE_PATH}/engine/cxView.cpp
+            ${CX_ENGINE_PATH}/engine/cxViewExt.cpp
             ${CX_ENGINE_PATH}/engine/cxGesture.cpp
             ${CX_ENGINE_PATH}/engine/cxWindow.cpp
+
+            ${CX_ENGINE_PATH}/uvudp/Worker.cpp
+            ${CX_ENGINE_PATH}/uvudp/cxWorker.cpp
 
             src/main/cpp/cxAndroid.cpp
             src/main/cpp/cxAndroidUtil.cpp)
