--- a/android/local.properties
+++ b/android/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Jan 12 14:44:25 CST 2019
-ndk.dir=/Users/xuhua/android-sdk-macosx/ndk-bundle
-sdk.dir=/Users/xuhua/android-sdk-macosx
+#Wed Jun 05 10:02:46 CST 2019
+ndk.dir=D\:\\AndroidSdk\\ndk-bundle
+sdk.dir=D\:\\AndroidSdk
